se generan los reportes

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mysql2": "^2.3.3",
     "nodemailer": "^6.4.8",
     "otplib": "^12.0.1",
+    "pdfkit-table": "^0.1.99",
     "sequelize": "^6.21.3",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
